--- a/react16/package.json
+++ b/react16/package.json
@@ -13,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:lib": "react-app-rewired start",
+    "build:lib": "react-app-rewired build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,10 +33,11 @@
     ]
   },
   "devDependencies": {
-    "@types/single-spa-react": "^2.8.3",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
-    "@types/react-dom": "16.9.4"
+    "@types/react-dom": "16.9.4",
+    "@types/single-spa-react": "^2.8.3",
+    "react-app-rewired": "^2.1.5"
   }
 }
