--- a/shell/package.json
+++ b/shell/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "single-spa": "^4.4.1"
   },
-  "devDependencies": {    
+  "devDependencies": {
+    "parcel": "^1.12.4"
   }
 }
