--- a/react16/package.json
+++ b/react16/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "single-spa-react": "^2.10.4",
+    "systemjs-webpack-interop": "^1.1.2",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -35,14 +36,18 @@
   "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
-    "@types/react": "16.9.13",
-    "@types/react-dom": "16.9.4",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "@types/single-spa-react": "^2.8.3",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "react-app-rewired": "^2.1.5",
-    "svg-inline-loader": "^0.8.0",
+    "css-loader": "^3.3.2",
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
