--- a/angular8/package.json
+++ b/angular8/package.json
@@ -8,8 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:single-spa": "ng build --prod --deploy-url http://localhost:4200/ --output-hashing none",
-    "serve:single-spa": "ng serve --disable-host-check --port 4200 --deploy-url http://localhost:4200/ --live-reload false"
+    "host": "http-server ./dist/angular8 --port=8081 --cors",
+    "build:host": "ng build --prod --deploy-url http://localhost:4200/ --output-hashing none && npm run host",
+    "serve:": "ng serve --disable-host-check --port 4200 --deploy-url http://localhost:4200/ --live-reload false"
   },
   "private": true,
   "dependencies": {
