--- a/react-16/package.json
+++ b/react-16/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "react16",
+  "name": "react-16",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "clean-webpack-plugin": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "single-spa-react": "^2.10.4",
-    "systemjs-webpack-interop": "^1.1.2",
-    "typescript": "3.7.2"
+    "react-scripts": "3.3.0",
+    "single-spa-react": "^2.11.0",
+    "systemjs-webpack-interop": "^1.1.2"    
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start:lib": "react-app-rewired start",
-    "build:lib": "react-app-rewired build"
+    "eject": "react-scripts eject",    
+    "build:lib": "webpack",
+    "host": "http-server ./build --port=8080 --cors",
+    "build:host": "npm run build:lib && npm run host"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,11 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
     "@types/single-spa-react": "^2.8.3",
+    "typescript": "~3.7.3",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.3.2",
@@ -47,7 +52,6 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
-    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
