--- a/shell/package.json
+++ b/shell/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "host": "parcel index.html --target=browser",
+    "build:host": "parcel index.html --target=browser"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "single-spa": "^4.4.1"
   },
   "devDependencies": {
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4"
   }
 }
