--- a/angular8/package.json
+++ b/angular8/package.json
@@ -9,8 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "host": "http-server ./dist/angular8 --port=8081 --cors",
-    "build:host": "SINGLE_SPA=true ng build --configuration=plugin --deploy-url http://localhost:4200/ --output-hashing none && npm run host",
-    "serve:app": "ng build && http-server ./dist/angular8 --port=8081 --cors",
+    "build:lib": "SINGLE_SPA=true ng build --configuration=plugin --source-map --output-hashing none",
+    "build:host": "npm run build && npm run host",
+    "serve:app": "ng build --source-map && http-server ./dist/angular8 --port=8082 --cors",
     "serve:": "ng serve --disable-host-check --port 4200 --deploy-url http://localhost:4200/ --live-reload false"
   },
   "private": true,
